@@ -117,6 +117,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.basicsdriverupdate.App</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
